tests/fail/function_calls/exported_symbol_bad_unwind2.both.stderr
thread 'main' panicked at 'explicit panic', $DIR/exported_symbol_bad_unwind2.rs:LL:CC
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: abnormal termination: the program aborted execution
  --> $DIR/exported_symbol_bad_unwind2.rs:LL:CC
   |
LL | / extern "C-unwind" fn nounwind() {
LL | |
LL | |
LL | |     panic!();
LL | | }
   | |_^ the program aborted execution
   |
   = note: inside `nounwind` at $DIR/exported_symbol_bad_unwind2.rs:LL:CC
note: inside `main` at $DIR/exported_symbol_bad_unwind2.rs:LL:CC
  --> $DIR/exported_symbol_bad_unwind2.rs:LL:CC
   |
LL |     unsafe { nounwind() }
   |              ^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

